tests/k8s_testcases/example_policies/testcase1/testcase1-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np1
    networkPolicyList:
      - testcase1-networkpolicy1.yaml
    expectedWarnings: 0

  - name: np2
    networkPolicyList:
      - testcase1-networkpolicy2.yaml
    expectedWarnings: 0

  - name: np3 # testing json policy from file entry
    networkPolicyList:
      - testcase1-networkpolicy1.json
    expectedWarnings: 0

  - name: notPolicyFile
    networkPolicyList:
      - testcase1-readme.yaml

queries:
  - name: connectivity_map
    connectivityMap:
    - np1
    - np2
    expected: 0
    outputConfiguration:
      outputFormat: dot
      outputPath: connectivityMap.dot
      fwRulesRunInTestMode: false

  - name: sanity
    sanity:
      - np1
    expected: 1

  - name: sanity_json_np
    sanity:
      - np3
    expected: 1

  - name: compare_np1_and_np2
    twoWayContainment:
      - np1
      - np2
    expected: 3
  - name: np1_and_np2_are_not_strongly_equivalent
    strongEquivalence:
      - np1
      - np2
    expected: 1
  - name: np1_and_np1_are_strongly_equivalent
    strongEquivalence:
      - np1
      - np1
    expected: 0
  - name: compare_specific_policies_in_np1_and_np2
    equivalence:
      - np1/default/allow-egress-deny-ingress-within-namespace
      - np2/default/allow-ingress-deny-egress-within-namespace
      - np1/default/allow-agent-to-analyzer-via-ingress
    expected: 2
  - name: redundancy_np1_and_np2
    redundancy:
      - np1
      - np2
    expected: 2
  - name: pairwiseInterferes_np1_and_np2
    pairwiseInterferes:
      - np1
      - np2
    expected: 0

  - name: not_empty
    emptiness:
      - np1
      - np2
    expected: 0
  - name: not_vacuous
    vacuity:
      - np1
      - np2

  - name: containment_np1_and_np2
    containment:
      - np1
      - np2
    expected: 1
  - name: containment_np2_and_np1
    containment:
      - np2
      - np1
    expected: 1
